Added side navigator and moved the progress bar there

--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -78,6 +78,16 @@
       </div>
     </nav>
 
+    <div class="sidenav">
+        <div class="rotated90" style="height: 100px; top: calc(50% + 50px); left: 15px;">
+            <h1 style="color: #ccc; position: relative; left: 100%;">Progress</h1>
+            <div class="progress" style="width: 400px;">
+                <div id="total_progress" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%;"><span class="sr-only">0% Complete</span></div>
+
+            </div>
+        </div>
+    </div>
+
     <div class="container theme-showcase" role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -108,13 +118,6 @@
           <option value="basic">Basic One-site Binding</option>
           <option value="nucleation_elongation">Nucleation-Elongation Model</option>
       </select>
-
-      <div class="page-header">
-        <h1>Progress</h1>
-      </div>
-      <div class="progress">
-        <div id="total_progress" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%;"><span class="sr-only">0% Complete</span></div>
-      </div>
 
       <div class="page-header">
         <h1>Data Analysis</h1>
@@ -282,6 +285,13 @@
                 $('#email_dana').html(data.replace('123','@'));
             })
 
+            $(document).keyup(function(e){
+                // escape
+                if(e.keyCode === 27) {
+                    $('#m_home').click();
+                }
+            });
+
             $('.smallcirc').draggable({
                 containment: "#fig_h_orig",
                 drag: function() {
@@ -398,12 +408,7 @@
                 clean_data(function(text_top_coords, text_bottom_coords) { 
                     $('#fig3').html('<img src="backend?function=fit_data&fnames=' + $('#input_path').val() + '&model=' + $('#model_choice').val() + '&threshold_points=' + text_top_coords + '&rev_threshold_points=' + text_bottom_coords + '&approx_start=' + $('#approx_start').css('left').slice(0,-2) + '">');
                     $('#fig_b_fit').click();
-                    $('#arrow_to_results').show(function() {
-                        for(i=0;i<3;i++) {
-                            $('#arrow_to_results').fadeTo(1000, 0).fadeTo(1000, 1.0);
-                        }
-                        $('#arrow_to_results').hide();
-                    });
+                    $('#arrow_to_results').delay(2000).fadeIn(1000).fadeOut(1000).fadeIn(1000).fadeOut(1000).fadeIn(1000).fadeOut(1000);
                     set_progress($('#total_progress'), 100, 'Fitting Done!');
                 });
             });
