Dynamic loading of model options from the kmodels.py module into the HTML interface

--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -116,8 +116,9 @@
       <p>
       Model: <select id="model_choice">
           <option value="auto" selected="selected">Automatic Best Model</option>
-          <option value="basic">Basic One-site Binding</option>
-          <option value="nucleation_elongation">Nucleation-Elongation Model</option>
+          {% for id, name in model_choice %}
+              <option value="{{ id }}">{{ name }}</option>
+          {% endfor %}
       </select>
       </p>
 
