--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -161,6 +161,7 @@
               <svg style="width:900px;height:600px;">
                   <g>
                     <path id="approx_start_p" style="stroke:#cccccc;fill:none;stroke-dasharray:4;stroke-width:3;" d="M 0 0 l 0 600"></path>
+                    <path d="M 33.145696,53.586086 21.198176,60.48399 9.2506566,67.381894 V 53.586086 39.790279 l 11.9475194,6.897904 z" id="path4503" style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#ff6600;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:3.52999973;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:7.0599999, 3.53;stroke-dashoffset:0;stroke-opacity:1;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
                     <text x="5" y="550" fill="#cccccc">
                         <tspan dx="0">Approx.</tspan>
                         <tspan dx="-53" dy="20">Kinetics</tspan>
