--- a/afgui/fitter/templates/fitter/bootstrap/orimon.css
+++ b/afgui/fitter/templates/fitter/bootstrap/orimon.css
@@ -14,6 +14,7 @@ input {
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: 13;
     margin: 50px 0 50px 0;
     background-color: rgba(0,0,0,0.7);
     display: none;
@@ -72,6 +73,8 @@ input {
 .message {
     margin: 100px;
     display: none;
+    max-height: 70%;
+    overflow-y: auto;
 }
 
 .hidden {
