--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -241,9 +241,38 @@
     <div class="overall">
         <div id="instructions" class="well message">
             <div class="page-header">
-                <h1>Instructions</h1>
+                <h1>Usage Instructions</h1>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <h3>Input Format</h3>
+            <p>The input for <em>Kfits</em> is the raw results from kinetic measurements in a textual comma-separated or tab-delimited format, with the first column representing time and the second column representing some measure of protein aggregation or fibril formation. For example, the first column may contain time in seconds and the second may represent light scattering at 360 nm in arbitrary units.<br>The line preceding the first line of data is assumed to contain the text "XYDATA" and the data is followed by a blank line. A period of baseline measurement is expected to precede the actual aggregation process, and the aggregation is assumed to continue until the end of the measurement.</p>
+            <h3>Flags and Parameters</h3>
+            <p>After fitting the measured data with the chosen model function, <em>Kfits</em> removes data points that are far from the theoretical curve ("TC"). The threshold (noise threshold, "NS") for the distance from the curve is estimated by the algorithm described above and can be overridden by the user. When the user choses not the set the "Noise is Always Above Signal" flag, every point residing outside of the TC &pm; NS band is marked for removal and removed; if the flag is set, only points with recorded values larger than TC + NS are removed. This flag is recommended for light scattering measurements, where air bubbles randomly cause excessive scattering.</p>
+            <h3>Workflow</h3>
+            <p><b><i>Step 1.</i> Loading Data and Setting Parameters.</b> The user choses a file and uploads it to the system, which plots the original measurement to the screen. The user can then choose the parameters for the fit. These includes the kinetic model to be used (an automatic best-fit option is available) and the "Noise is Always Above Signal" flag.<br>
+            <b><i>Step 2.</i> Setting the Margins of the Signal.</b> In many cases, certain areas of the kinetic plot contain only noise, easily identifiable by the researcher. Two adjustable two-segment lines represent "only noise above this line" (green) and "only noise below this line" (red), allowing you to remove obvious noise.<br>
+            <b><i>Step 3.</i> Setting Approximate Start of Kinetics Curve.</b> Kinetic measurements often start with a baseline measurement, followed by addition of the components that create the observable signal. This setting has two effects: measurements before the chosen time point are used by the software to determine baseline values; and the model fit is assessed only according to data points after this point.<br>
+            <b><i>Step 4.</i> Fitting a Function to the Data.</b> The software will now try to fit the chosen model to the data using non-linear least-squares regression. It will then try to optimise the noise threshold, which can also be manually set by the user. Any datapoint residing outside the "signal band" will subsequently be removed.<br>
+            <b><i>Step 5.</i> Downloading Clean Data and Reviewing Kinetic Parameters.</b> At this final step, you can review your clean data as well as the calculated kinetic parameters. Then you can potentially adjust the noise threshold to achieve cleaner results or reduce loss of data, as well as download the clean results in textual format to your computer.</p>
+            <h1>Further Instructions</h1>
+            <h3>Adding Support for Other Kinetic Models</h3>
+            <p>The module kmodels.py describes the kinetic models that can be used by <em>Kfits</em>.<br>Each model is described by three constants: a function named <b><em>FIT_&lt;yourmodel&gt;_INIT</em></b> returning the default values for the parameters, a tuple named <b><em>FIT_&lt;yourmodel&gt;_PARAM_NAMES</em></b> containing the names of the parameter (allowing HTML tags) and the model itself represented by a parameterized function receiving time (t) as the first parameter and returning the expected y value at that time.</p>
+            <h4>Parameter Initiation Function</h4>
+            This function receives two parameters: The apparent maximum value and the calculated baseline. Based on this very basic information the function should approximate <b>very grossly</b> the parameters of the kinetic model, and return them in a tuple in the same order in which they will be constantly used in this model. These approximations will be used as the starting point from which the regression algorithm can begin fitting the model to the data.<br>For example, if we use the basic one-site binding model, i.e. y = (t * v<sub>max</sub>) / (t + t<sub>&#189;</sub>):<br>
+            <pre><code>def FIT_BASIC_INIT(apparent_max, baseline):
+    approx_vmax = apparent_max - baseline
+    approx_thalf = 12
+    return (approx_vmax, approx_thalf)</code></pre>
+            <h4>Parameter Name Tuple</h4>
+            This is simply a tuple of names, which may contain html tags. These are used for displaying the fitted model parameters to the user at the end of the fitting process.<br>For example:<br>
+            <pre><code>FIT_BASIC_PARAM_NAMES = ('v&lt;sub&gt;max&lt;/sub&gt;', 't&lt;sub&gt;&#189;&lt;/sub&gt;')</code></pre>
+            <h4>The Model Function</h4>
+            This function is the most important part of the model definition, as it implements the integrated rate law that should be fitted to the data if this model is correct. The function simply receives t, i.e. the value on the x axis, as well as the values of all the kinetic parameters of the model by the same order used in the parameter initiation function. It returns the prediction of the y value at that time point for the given values of the kinetic parameters.<br>For example:<br>
+            <pre><code>def fit_basic(t, vmax, thalf):
+    return (t * vmax) / (t + thalf)</code></pre>
+            <h4>Registering the Model</h4>
+            After implementing the three components of a model, the model should be registered by adding it to the return value of the function get_models (in the same module). This function returns a dictionary, in which keys represent short simple names of models (which should not contain spaces or special characters) and values are four-tuples. The four-tuple for a model is comprised of the model function, the parameter initiation function, the parameter name tuple, and a long human-readable name for the model - in that order.<br>For example:<br>
+            <pre><code>{'basic': (fit_basic, FIT_BASIC_INIT, FIT_BASIC_PARAM_NAMES, 'Basic One-Site Binding')}</code></pre>
+            Once the model is registered, the kfits server should be started (or restarted if it was running), and the new model will appear in the model choice box as well as being considered in the automatic model selection algorithm.
         </div>
         <div id="about" class="well message">
             <div class="page-header">
