Added the search_for_end (process reaches plateau) flag :)

--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -130,6 +130,9 @@
       <p>
       <input type="checkbox" id="noise_only_above" value="noise_only_above" checked>
       Noise is Always Above Signal
+      <br>
+      <input type="checkbox" id="reaches_plateau" value="reaches_plateau">
+      Process Reached Plateau During Measurement
       </p>
 
       <div class="page-header">
