--- a/afgui/fitter/templates/fitter/bootstrap/orimon.css
+++ b/afgui/fitter/templates/fitter/bootstrap/orimon.css
@@ -1,3 +1,18 @@
+.floater {
+    float: left;
+    margin-left: 100px;
+}
+
+@media screen and ( min-width: 1320px ) {
+    .floater {
+        float: none;
+        margin-left: auto;
+    }
+    .container-fluid {
+        width: 1100px;
+    }
+}
+
 input {
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -14,7 +29,7 @@ input {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 13;
+    z-index: 1313;
     margin: 50px 0 50px 0;
     background-color: rgba(0,0,0,0.7);
     display: none;
@@ -42,7 +57,13 @@ input {
 
 .btn-offig {
     margin-top: 15px;
-    width: 900px;
+    width: 100%;
+}
+
+@media screen and ( max-width: 1210px ) {
+    .kfigure {
+        width: 100%;
+    }
 }
 
 .sidenav {
@@ -71,10 +92,15 @@ input {
 }
 
 .message {
-    margin: 100px;
+    margin: 20px 50px 0px 150px;
     display: none;
-    max-height: 70%;
+    max-height: 75%;
     overflow-y: auto;
+}
+@media screen and ( max-height: 650px ) {
+    .message {
+        max-height: 400px;
+    }
 }
 
 .hidden {
