--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-    <div class="container theme-showcase" role="main">
+    <div class="container-fluid theme-showcase floater" role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
@@ -144,11 +144,11 @@
           <li id="fig_b_fit" role="presentation" class="fig_badge"><a class="clickable">Fit</a></li>
       </ul>
       <div id="fig_h_orig" class="fig_head">
-          <span id="fig1"></span>
+          <span id="fig1" data-mywidth="{{ width }}" data-myheight="{{ height }}"></span>
           <div id="top_dragline1" class="smallcirc" style="background-color:darkgreen; display:none;"></div>
           <div id="top_dragline2" class="smallcirc" style="background-color:darkgreen; display:none;"></div>
           <div id="top_dragline3" class="smallcirc" style="background-color:darkgreen; display:none;"></div>
-          <svg style="position:absolute;height:600px;width:900px;left:0;top:0;">
+          <svg style="position:absolute;height:{{ height }}px;width:{{ width }}px;left:0;top:0;">
               <g>
                 <path id="top_dragline" style="stroke:darkgreen;fill:none;" d="">
               </g>
@@ -156,7 +156,7 @@
           <div id="bottom_dragline1" class="smallcirc" style="background-color:darkred; display:none;"></div>
           <div id="bottom_dragline2" class="smallcirc" style="background-color:darkred; display:none;"></div>
           <div id="bottom_dragline3" class="smallcirc" style="background-color:darkred; display:none;"></div>
-          <svg style="position:absolute;height:600px;width:900px;left:0;top:0;">
+          <svg style="position:absolute;height:{{ height }}px;width:{{ width }}px;left:0;top:0;">
               <g>
                 <path id="bottom_dragline" style="stroke:darkred;fill:none;" d="">
               </g>
@@ -166,9 +166,9 @@
       <div id="fig_h_filt" class="fig_head">
           <span id="fig2"></span>
           <div id="approx_start" style="position:absolute;display:none;left:90px;top:0px;">
-              <svg style="width:900px;height:600px;">
+              <svg style="width:{{ width }}px;height:{{ height }}px;">
                   <g>
-                    <path id="approx_start_p" style="stroke:#cccccc;fill:none;stroke-dasharray:4;stroke-width:3;" d="M 0 0 l 0 600"></path>
+                    <path id="approx_start_p" style="stroke:#cccccc;fill:none;stroke-dasharray:4;stroke-width:3;" d="M 0 0 l 0 {{ height }}"></path>
                     <path d="M 33.145696,53.586086 21.198176,60.48399 9.2506566,67.381894 V 53.586086 39.790279 l 11.9475194,6.897904 z" id="path4503" style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#ff6600;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:3.52999973;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:7.0599999, 3.53;stroke-dashoffset:0;stroke-opacity:1;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
                     <text x="5" y="550" fill="#cccccc">
                         <tspan dx="0">Approx.</tspan>
@@ -178,7 +178,7 @@
                   </g>
               </svg>
           </div>
-          <button id="fit_data" type="button" class="btn btn-warning btn-offig" style="width:900px;display:none;">Fit Data</button>
+          <button id="fit_data" type="button" class="btn btn-warning btn-offig" style="width:{{ width }}px;display:none;">Fit Data</button>
       </div>
       <div id="fig_h_fit" class="fig_head">
           <span id="fig3"></span>
