Introducing Kfits sessions - separating input and outputs of different users/tabs and saving outputs for 24 hours

--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -210,6 +210,7 @@
             <button id="clean_data" type="button" class="btn btn-info" style="width:40%;" disabled=true>Apply Threshold</button>
             <div id="fig4" style="margin-top:10px;"></div>
             <button id="get_clean_data" type="button" class="btn btn-success" style="width:100%;">Download Clean Data</button>
+            <small style="padding: 10%"><em id="dlink"></em></small>
         </div>
         <div class="col-md-6">
           <table class="table table-condensed">
