--- a/afgui/fitter/templates/fitter/test.htm
+++ b/afgui/fitter/templates/fitter/test.htm
@@ -11,11 +11,12 @@
   </script>
 </head>
 <body>
- 
-<div id="bla" style="width: 150px; height: 150px; padding: 0.5em; border: 1px solid black;">
-  <p>Drag me around</p>
+
+<div id="bla" style="width: 600px; height: 300px; padding: 0.5em; border: 1px solid black;">
+    <p><b>Drag me around</b></p>
+  <p>{{ sessions |safe }}</p>
 </div>
- 
- 
+
+
 </body>
 </html>
