Updated readme, added redirect from / to fitter/

--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -56,11 +56,13 @@
             <li id="m_about" class="topnav_btn"><a class="clickable">About</a></li>
             <li id="m_contact" class="topnav_btn"><a class="clickable">Contact</a></li>
             <li class="dropdown">
-              <a class="clickable dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other Software <span class="caret"></span></a>
+              <a class="clickable dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">External Links <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <!--li><a href="../cleaner">Aggregation Data Cleaner</a></li-->
+                <li><a href="https://github.com/odedrim/kfits#installation-instructions">Instructions for Installing Kfits Locally</a></li>
+                <li><a href="https://github.com/odedrim/kfits">Download Kfits Source</a></li>
+                <li><a href="https://github.com/odedrim/kfits/tree/master/install">Download Kfits Installers</a></li>
                 <li role="separator" class="divider"></li>
-                <li class="dropdown-header">For Download</li>
+                <li class="dropdown-header">Other Software</li>
                 <li><a href="http://www.reichmannlab.com/softwares">Predictor of Hsp33-binding peptides</a></li>
               </ul>
             </li>
